--- a/src/main_applications_components/ApplicationDetailNotes.scss
+++ b/src/main_applications_components/ApplicationDetailNotes.scss
@@ -6,6 +6,24 @@
     font-size: 11px;
 }
 
+.ApplicationDetailNote-container{
+  padding: 5px;
+  background: rgba(255, 255, 255, 0.1);
+  width: 500px;
+  border-radius: 15px;
+  margin-bottom: 8px;
+}
+.ApplicationDetailNote-title-container{
+  display: flex;
+  align-items: center;
+}
+
+.notes{
+  color: #ffffff;
+  font-size: 16px;
+  margin-right: 5px;
+  margin-left: 6px;
+}
   /**
    * Draft v0.9.1
    *
