--- a/src/main_applications_components/ApplicationDetailNotes.scss
+++ b/src/main_applications_components/ApplicationDetailNotes.scss
@@ -72,12 +72,12 @@
 .public-DraftStyleDefault-orderedListItem:before{content:counter(ol0) ". ";counter-increment:ol0}
 .public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-depth1:before{content:counter(ol1) ". ";counter-increment:ol1}
 .public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-depth2:before{content:counter(ol2) ". ";counter-increment:ol2}
-// .public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-depth3:before{content:counter(ol3) ". ";counter-increment:ol3}
-// .public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-depth4:before{content:counter(ol4) ". ";counter-increment:ol4}
+.public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-depth3:before{content:counter(ol3) ". ";counter-increment:ol3}
+.public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-depth4:before{content:counter(ol4) ". ";counter-increment:ol4}
 .public-DraftStyleDefault-depth0.public-DraftStyleDefault-reset{counter-reset:ol0}
 .public-DraftStyleDefault-depth1.public-DraftStyleDefault-reset{counter-reset:ol1}
-// .public-DraftStyleDefault-depth2.public-DraftStyleDefault-reset{counter-reset:ol2}
-// .public-DraftStyleDefault-depth3.public-DraftStyleDefault-reset{counter-reset:ol3}
-// .public-DraftStyleDefault-depth4.public-DraftStyleDefault-reset{counter-reset:ol4}
+.public-DraftStyleDefault-depth2.public-DraftStyleDefault-reset{counter-reset:ol2}
+.public-DraftStyleDefault-depth3.public-DraftStyleDefault-reset{counter-reset:ol3}
+.public-DraftStyleDefault-depth4.public-DraftStyleDefault-reset{counter-reset:ol4}
 
 /*# sourceMappingURL=main.css.map*/
