--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
-/* .App {
+.App {
   width: 540px;
   height: 600px;
   background: #121212;
   position: relative;
   -webkit-app-region: drag;
-} */
+
+}
+.modalButton{
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
+  margin: 0;
+}
