--- a/src/main_companies/CompanyList.scss
+++ b/src/main_companies/CompanyList.scss
@@ -1,4 +1,4 @@
-.Company-container{
+.sypp-Company-container{
     // margin: 0 auto;
     display: flex;
     justify-content: left;
@@ -13,7 +13,7 @@
     // padding-top: 5px;
     // padding-bottom: 5px;
 }
-.CompanyList{
+.sypp-CompanyList{
     margin-left: 10px;
     font-size: 12px;
     color: #ffffff;
