--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -1,23 +1,23 @@
-.main{
+.sypp-main{
     border:transparent !important ;
     font-size: 12px;
     color: rgba(255, 255, 255, 0.4);
     background: transparent;
 
 }
-.react-calendar__tile.customTile{
+.react-calendar__tile.sypp-customTile{
     padding: 0.5em 0.5em;
     color: rgba(255, 255, 255, 0.87);
     outline: none;
     /* background: tomato !important; */
 }
-.react-calendar__tile--active.background{
+.react-calendar__tile--active.sypp-background{
     background: rgba(255, 255, 255, 0.4);
     color: rgba(255, 255, 255, 0.1);
     border: transparent;
     outline: none;
 }
-.react-calendar__tile--active:enabled:focus.changeFocus{
+.react-calendar__tile--active:enabled:focus.sypp-changeFocus{
     background: rgba(255, 255, 255, 0.4);
     border-radius: 0 !important;
     border: transparent !important;
@@ -25,11 +25,11 @@
     outline: none;
 }
 
-.react-calendar.changeMargin{
+.react-calendar.sypp-changeMargin{
     max-width: 85%;
     margin: 0 auto;
 }
-.react-calendar__year-view.changeSize{
+.react-calendar__year-view.sypp-changeSize{
     padding: 1em 0.5em;
 }
 
