--- a/src/components/radio/RadioButtons.css
+++ b/src/components/radio/RadioButtons.css
@@ -6,7 +6,7 @@
 [type='radio'] {
     display: none; 
 }
-.button-container{
+.sypp-button-container{
     /* display: inline-block; */
     margin-left: 5px;
     margin-right: 5px;
@@ -14,11 +14,11 @@
     margin-bottom: 2px;
 }
 
-.button-towButtons-container{
+.sypp-button-towButtons-container{
     margin-top: 15px;
 }
 
-.btn-secondary.colorChange{
+.btn-secondary.sypp-colorChange{
     border-radius: 26px;
     min-height: 24;
     min-width: 67;
@@ -27,46 +27,46 @@
     color: black;
 }
 
-.btn-secondary.twoButtons{
+.btn-secondary.sypp-twoButtons{
     min-width: 56 !important;
     min-height: 32 !important;
 
 }
-.btn-secondary:not(:disabled):not(.disabled).active.activeChange{
+.btn-secondary:not(:disabled):not(.disabled).active.sypp-activeChange{
     background-color: rgba(255, 255, 255, 0.5);
     border:none;
 }
 
-.btn:hover.hoverChange{
+.btn:hover.sypp-hoverChange{
     background: rgba(255, 255, 255, 0.5);
     border:none;
 }
 
-.btn.text1{
+.btn.sypp-text1{
     font-size: 11;
     color: #FFFFFF;
 }
-.btn.text{
+.btn.sypp-text{
     padding: 0;
     font-size: 11;
     color: #FFFFFF;
 }
 
-.button-group-container{
+.sypp-button-group-container{
     /* flex-direction: column; */
 }
-.btn-secondary.button-props{
+.btn-secondary.sypp-button-props{
     display: flex;
     align-items: center;
     justify-content: center;
     min-width: 90px !important;
 }
-.tooltip-container{
+.sypp-tooltip-container{
     display: block;
     max-width: 330px;
 }
 
-.radio-button-container{
+.sypp-radio-button-container{
     padding-top: 3px;
     min-width: 65px;
     min-height: 24px;
