--- a/src/main_applications/CategoryButtons.scss
+++ b/src/main_applications/CategoryButtons.scss
@@ -1,4 +1,4 @@
-.CategoryBox{
+.sypp-CategoryBox{
     padding: 0;
     font-size: 20px !important;
     pointer-events: auto !important;
@@ -22,7 +22,7 @@
 }
 
 
-.subCategory-button{
+.sypp-subCategory-button{
     border: none;
     background: none;
     font-size: 10px;
