--- a/src/main_applications_components/ApplicationDetailNotes.scss
+++ b/src/main_applications_components/ApplicationDetailNotes.scss
@@ -1,24 +1,28 @@
-.idk{
+.sypp-idk{
     color: #ffffff;
 }
-.editor-class{
+.sypp-editor-class{
     color: #ffffff;
     font-size: 11px;
 }
 
-.ApplicationDetailNote-container{
+.sypp-ApplicationDetailNote-container{
   padding: 5px;
   background: rgba(255, 255, 255, 0.1);
   width: 500px;
   border-radius: 15px;
   margin-bottom: 8px;
 }
-.ApplicationDetailNote-title-container{
+.sypp-ApplicationDetailNote-title-container{
   display: flex;
   align-items: center;
 }
-
-.notes{
+.sypp-ApplicationDetailFollowup-title-container{
+  display: flex;
+  align-items: left;
+  flex-direction: column;
+}
+.sypp-notes{
   color: #ffffff;
   font-size: 16px;
   margin-right: 5px;
@@ -34,9 +38,9 @@
    * LICENSE file in the root directory of this source tree. An additional grant
    * of patent rights can be found in the PATENTS file in the same directory.
    */
-   .DraftEditor-editorContainer,.DraftEditor-root,.public-DraftEditor-content{
-    height:inherit;text-align:initial
-  }
+.DraftEditor-editorContainer,.DraftEditor-root,.public-DraftEditor-content{
+height:inherit;text-align:initial
+}
 .public-DraftEditor-content[contenteditable=true]{
   -webkit-user-modify:read-write-plaintext-only
 }.DraftEditor-root{
@@ -58,7 +62,7 @@
 .public-DraftStyleDefault-rtl{direction:rtl;text-align:right}
 .public-DraftStyleDefault-listLTR{direction:ltr}
 .public-DraftStyleDefault-listRTL{direction:rtl}
-.public-DraftStyleDefault-ol,.public-DraftStyleDefault-ul{margin:16px 0;padding:0}
+.public-DraftStyleDefault-ol,.public-DraftStyleDefault-ul{margin:0 0;padding:0}
 .public-DraftStyleDefault-depth0.public-DraftStyleDefault-listLTR{margin-left:1.5em}
 .public-DraftStyleDefault-depth0.public-DraftStyleDefault-listRTL{margin-right:1.5em}
 .public-DraftStyleDefault-depth1.public-DraftStyleDefault-listLTR{margin-left:3em}
