create event fix

--- a/src/main_applications/ApplicationDetail.scss
+++ b/src/main_applications/ApplicationDetail.scss
@@ -105,3 +105,16 @@
     margin-bottom: 80px;
     margin-left: -10px;
 }
+
+.sypp-create-detail-modal{
+    width: 446px !important;
+    height: 446px !important;
+    border-radius: 15px;
+    background: transparent;
+}
+.sypp-create-detail-modal-container{
+    width: 446px !important;
+    height: 446px !important;
+    background: #343B46;
+    border-radius: 15px;
+}
