company part added too, will need to focus on data types

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .sypp-App {
   width: 540px;
   height: 600px;
-  background: #121212;
+  background: rgb(37,41,48);
   position: relative;
   z-index: 1;
   -webkit-app-region: drag;
