--- a/src/main/MainPage.scss
+++ b/src/main/MainPage.scss
@@ -14,7 +14,9 @@
     border-radius: 10px;
     min-height: 28;
     min-width: 104;
-    background: rgba(255, 255, 255, 0.2);
+    background: #363C46;
     border: none;
-    color: #ffffff;
+    color: rgba(194, 219, 255, 1)
+    ;
 }
+
