--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -3,7 +3,9 @@
     font-size: 12px;
     color: rgba(255, 255, 255, 0.4);
     background: transparent;
-
+}
+.react-calendar__navigation button{
+    color: #ffffff;
 }
 .react-calendar__tile.sypp-customTile{
     padding: 0.5em 0.5em;
@@ -12,16 +14,20 @@
     /* background: tomato !important; */
 }
 .react-calendar__tile--active.sypp-background{
-    background: rgba(255, 255, 255, 0.4);
-    color: rgba(255, 255, 255, 0.1);
+    /* background: rgba(255, 255, 255, 0.4); */
+    background: transparent;
+    color: #FFE9D6 !important;
+    font-weight: bold;
     border: transparent;
     outline: none;
 }
 .react-calendar__tile--active:enabled:focus.sypp-changeFocus{
-    background: rgba(255, 255, 255, 0.4);
+    /* background: rgba(255, 255, 255, 0.4); */
+    background: transparent !important;
     border-radius: 0 !important;
     border: transparent !important;
-    background-color: rgba(255, 255, 255, 0.4);
+    /* background-color: rgba(255, 255, 255, 0.4); */
+    background: transparent !important;
     outline: none;
 }
 
@@ -34,9 +40,10 @@
 }
 
 .react-calendar, .react-calendar *, .react-calendar *:before, .react-calendar *:after {
-    color: rgba(255, 255, 255, 0.87) !important;
+    /* color: rgba(255, 255, 255, 0.435); */
 }
 
 .react-calendar__tile--now{
-    background: rgba(255, 255, 255, 0.4) !important;
+    /* background: rgba(255, 255, 255, 0.4) !important; */
+    background: transparent !important;
 }
