--- a/src/components/progress/Progress.css
+++ b/src/components/progress/Progress.css
@@ -96,8 +96,7 @@
     margin-bottom: -4;
     font-size: 12px;
     font-weight: bold;
-    color: rgba(255,255,255,.87);
-
+    color: #FFE9D6;
 }
 .sypp-searchBox{
     width: 510px;
