--- a/src/components/radio/RadioButtons.css
+++ b/src/components/radio/RadioButtons.css
@@ -21,7 +21,7 @@
 .btn-secondary.sypp-colorChange{
     border-radius: 26px;
     min-height: 24;
-    min-width: 67;
+    /* min-width: 67; */
     background: rgba(255, 255, 255, 0.1);
     border: none;
     color: black;
@@ -33,23 +33,36 @@
 
 }
 .btn-secondary:not(:disabled):not(.disabled).active.sypp-activeChange{
-    background-color: rgba(255, 255, 255, 0.5);
+    background: #C2DBFF;
     border:none;
+    color: black;
+    font-family: Assistant;
+font-style: normal;
 }
 
 .btn:hover.sypp-hoverChange{
-    background: rgba(255, 255, 255, 0.5);
+    font-family: Assistant;
+    font-style: normal;
+    background: #C2DBFF;
+    font-weight: bold;
     border:none;
+    color: #363C46;
 }
 
 .btn.sypp-text1{
     font-size: 11;
-    color: #FFFFFF;
+    font-weight: bold;
+    font-family: Assistant;
+    font-style: normal;
+    color: rgba(194, 219, 255, 1);
 }
 .btn.sypp-text{
     padding: 0;
     font-size: 11;
-    color: #FFFFFF;
+    font-weight: bold;
+    font-family: Assistant;
+    font-style: normal;
+    color: rgba(194, 219, 255, 1);
 }
 
 .sypp-button-group-container{
@@ -67,7 +80,12 @@
 }
 
 .sypp-radio-button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding-top: 3px;
-    min-width: 65px;
+    /* min-width: 65px; */
     min-height: 24px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
