--- a/src/main_applications_components/ApplicationDetailNotes.scss
+++ b/src/main_applications_components/ApplicationDetailNotes.scss
@@ -8,15 +8,19 @@
 
 .sypp-ApplicationDetailNote-container{
   padding: 5px;
-  background: rgba(255, 255, 255, 0.1);
+  background: #343B46;
   width: 500px;
   border-radius: 15px;
   margin-bottom: 8px;
 }
 .sypp-ApplicationDetailNote-title-container{
-  display: flex;
-  align-items: center;
+
 }
+.sypp-ApplicationDetailNote-title{
+  display: flex;
+}
+
+
 .sypp-ApplicationDetailFollowup-title-container{
   display: flex;
   align-items: left;
@@ -27,6 +31,21 @@
   font-size: 16px;
   margin-right: 5px;
   margin-left: 6px;
+}
+.sypp-note-text-header{
+  font-family: Assistant;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  color: rgba(255, 255, 255, 0.87);
+}
+.sypp-note-text-subText{
+  font-family: Assistant;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  color: rgba(255, 255, 255, 0.87);
+  margin-left: 15px;
 }
   /**
    * Draft v0.9.1
