--- a/src/main_applications_components/ApplicationDetailChecklists.scss
+++ b/src/main_applications_components/ApplicationDetailChecklists.scss
@@ -31,3 +31,11 @@
     margin: 0;
     padding: 0 !important;
 }
+.sypp-checklist-body{
+    font-size: 10px;
+    color: #F5F5F5;
+    font-size: 11px;
+    font-family: Assistant;
+    font-style: normal;
+    font-weight: normal;
+}
