--- a/src/components/addApp/Modalbox.css
+++ b/src/components/addApp/Modalbox.css
@@ -13,7 +13,7 @@
 
 .sypp-ModalMain{
     width: 320px !important;
-    height: 320px;
+    height: 320px ;
     margin: 0 auto;
     padding: 0;
 }
@@ -32,7 +32,7 @@
 .sypp-submodal-container{
     height: 150px;
     padding-top: 30px;
-    background: #292929;}
+    background: #343B46}
 
 .sypp-Modal-container{
     /* display: block; */
@@ -40,28 +40,13 @@
     padding: 0;
     max-width: 320px;
     min-height: 320px;
-    background: #292929;}
+    background: #343B46;
+    border-radius: 15px;
+}
 .sypp-modal-text{
     text-align: center;
     font-size: 12px;
     color: #ffffff;
-}
-.sypp-modal-input{
-    display: block;
-    justify-self: center;
-    margin:0 auto; 
-    text-align: center;
-    place-self: center;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    width: 240px;
-    margin-top: 9px;
-    min-height: 35px;
-    background: rgba(255, 255, 255, 0.15);
-    color: #FFFFFF;
-    border: transparent;
-    border-radius: 26px;
-    font-size: 12px;
 }
 
 .sypp-button-close{
@@ -74,24 +59,7 @@
     color: rgba(255, 255, 255, 0.87);
 }
 
-.sypp-button-next{
-    display: inline-flex;
-    margin:0; 
-    padding: 0;
-    border: none;
-    background: none;
-    font-size: 12px;
-    color: rgba(255, 255, 255, 0.87);
-}
-.sypp-button-prev{
-    display: inline-flex;
-    margin-right : 20px; 
-    padding: 0;
-    border: none;
-    background: none;
-    font-size: 12px;
-    color: rgba(255, 255, 255, 0.87);
-}
+
 
 .sypp-next-button-container{
     width: 100%;
@@ -111,10 +79,13 @@
     padding: 0px;
     margin-left: 10%;
     display: flex;
+    font-family: Assistant;
+    font-style: normal;
+    font-weight: bold;
     font-size: 10px;
     border: none;
     background: none;
-    color: rgba(255, 255, 255, 0.87);
+    color: #C2DBFF;
 }
 .sypp-category-container{
     display: block;
@@ -155,3 +126,4 @@
 .MuiButton-contained.sypp-changeShadow{
     box-shadow: none;
 }	
+
