--- a/src/components/page/Page.css
+++ b/src/components/page/Page.css
@@ -2,7 +2,7 @@
 .sypp-circle-container{
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 27px;
     margin-bottom: 35px;
     padding: 0;
 }
@@ -11,7 +11,7 @@
     display: inline-flex;
     width: 10px;
     height: 10px;
-    background: rgba(255, 255, 255, 0.3);    border-radius: 5px;
+    background: #5E6A7E;    border-radius: 5px;
     margin-left: 10px;
     margin-right: 10px;
   }
@@ -20,7 +20,8 @@
     display: inline-flex;
     width: 10px;
     height: 10px;
-    background: rgba(255, 255, 255, 0.87);    border-radius: 5px;
+    background: #C2DBFF;
+        border-radius: 5px;
     margin-left: 10px;
     margin-right: 10px;  
   }
