--- a/src/components/progress/ProgressBar.scss
+++ b/src/components/progress/ProgressBar.scss
@@ -88,3 +88,41 @@
 .sypp-NotCompleted{
     background-color: #FFD600 !important;
 }
+.sypp-task-tooltip-completed{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #94CE4B;
+    color: #1A1C20;
+    font-family: Assistant;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 27px;
+    margin-top: 2px;
+    margin-left: -10px;
+    width: 59px;
+    height: 17px;
+    z-index: 2;
+}
+.sypp-task-tooltip-notcompleted{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #FFD600;
+    width: 59px;
+    height: 17px;
+    color: #1A1C20;
+    font-family: Assistant;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 27px;
+    margin-top: 2px;
+    z-index: 2;
+    margin-left: -10px;
+}
