--- a/src/components/radio/RadioButtons.css
+++ b/src/components/radio/RadioButtons.css
@@ -21,7 +21,6 @@
 .btn-secondary.sypp-colorChange{
     border-radius: 26px;
     min-height: 24;
-    /* min-width: 67; */
     background: rgba(255, 255, 255, 0.1);
     border: none;
     color: black;
@@ -37,7 +36,7 @@
     border:none;
     color: black;
     font-family: Assistant;
-font-style: normal;
+    font-style: normal;
 }
 
 .btn:hover.sypp-hoverChange{
@@ -50,6 +49,9 @@ font-style: normal;
 }
 
 .btn.sypp-text1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 11;
     font-weight: bold;
     font-family: Assistant;
@@ -57,6 +59,9 @@ font-style: normal;
     color: rgba(194, 219, 255, 1);
 }
 .btn.sypp-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0;
     font-size: 11;
     font-weight: bold;
@@ -83,7 +88,6 @@ font-style: normal;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 3px;
     /* min-width: 65px; */
     min-height: 24px;
     padding-left: 10px;
