--- a/src/main/MainPage.scss
+++ b/src/main/MainPage.scss
@@ -2,8 +2,8 @@
     /* display: inline-block; */
     margin-left: 5px;
     margin-right: 5px;
-    margin-top: 2px;
-    margin-bottom: 2px;
+    // margin-top: 2px;
+    // margin-bottom: 2px;
 }
 
 
@@ -11,12 +11,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
-    min-height: 28;
+    border-radius: 30px;
+    min-height: 26;
     min-width: 104;
     background: #363C46;
     border: none;
-    color: rgba(194, 219, 255, 1)
-    ;
+    color: rgba(194, 219, 255, 1);
 }
 
