--- a/src/main_applications/ApplicationList.scss
+++ b/src/main_applications/ApplicationList.scss
@@ -51,3 +51,18 @@
     left: 15px;
     z-index: 5;
 }
+
+.sypp-applicationlist-searchBox{
+    display: flex;
+    align-items: center;
+    padding-left: 7px;
+    width: 510px;
+    height: 24px;
+    font-size: 11px;
+    color: #ffffff;
+    border: 2px solid #363C46;
+    box-sizing: border-box;
+    border-radius: 30px;
+    background: transparent;
+    outline: none;
+}
