--- a/src/main/MainPage.scss
+++ b/src/main/MainPage.scss
@@ -5,7 +5,10 @@
     // margin-top: 2px;
     // margin-bottom: 2px;
 }
-
+.sypp-main-button-container{
+    padding-top: 20px;
+    margin-left: 20px;
+}
 
 .btn-secondary.sypp-mainButtonGroups{
     display: flex;
