--- a/src/main_companies/CompanyList.scss
+++ b/src/main_companies/CompanyList.scss
@@ -15,7 +15,11 @@
 }
 .sypp-CompanyList{
     margin-left: 10px;
-    font-size: 12px;
-    color: #ffffff;
     cursor: pointer;
-}
+    font-family: Assistant;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    color: #FFE9D6;
+    }
