--- a/src/main_applications_components/ApplicationDetailNotes.scss
+++ b/src/main_applications_components/ApplicationDetailNotes.scss
@@ -8,9 +8,11 @@
 
 .sypp-ApplicationDetailNote-container{
   padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   background: #343B46;
   width: 500px;
-  border-radius: 15px;
+  border-radius: 5px;
   margin-bottom: 8px;
 }
 .sypp-ApplicationDetailNote-title-container{
