--- a/src/components/addApp/Modalbox.scss
+++ b/src/components/addApp/Modalbox.scss
@@ -1,5 +1,8 @@
 .sypp-newapp-button{
     display: flex;
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
     border: none;
     width: 101px;
     height: 44px;
