--- a/src/main_companies/CompanyList.scss
+++ b/src/main_companies/CompanyList.scss
@@ -23,3 +23,115 @@
     line-height: 16px;
     color: #FFE9D6;
     }
+
+
+.sypp-ModalMain{
+    width: 320px !important;
+    height: 320px ;
+    margin: 0 auto;
+    padding: 0;
+}
+.sypp-Modal-container{
+    /* display: block; */
+    margin: 0;
+    padding: 0;
+    max-width: 320px;
+    min-height: 320px;
+    background: #343B46;
+    border-radius: 15px;
+}
+.sypp-button-close{
+    position: absolute;
+    font-size: 5px;
+    right: 15px;
+    top: 15px;
+    border: none;
+    background: none;
+    color: rgba(255, 255, 255, 0.87);
+}
+.sypp-modal-input{
+    text-align: center;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    width: 240px;
+    margin-top: 9px;
+    min-height: 35px;
+    background: rgba(255, 255, 255, 0.15);
+    color: #FFE9D6;
+    border: none;
+    border-radius: 26px;
+    font-size: 12px;
+    outline: none;
+    &:hover{
+        border: solid 1px #918D8D;
+    }
+    &:active{
+        border: solid  1px #DACABD
+    }
+    &:focus{
+        border: solid  1px #DACABD
+    }
+}
+.sypp-button-next{
+    display: block;
+    margin: 0 auto;  
+    margin-top: 100px;  
+    padding: 0;
+    border: none;
+    background: none;
+    font-family: Assistant;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    color: #C2DBFF;
+    margin-bottom: 10px;
+ 
+    &:disabled{
+        color: #5E6A7E;
+    }
+    &:hover{
+        color: #DBEAFF;
+    }
+    &:active{
+        color: #E3EFFF;   
+    }
+    &:focus{
+        color: #E3EFFF;   
+        outline: none;
+    }
+}
+.sypp-addcompany-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 113px;
+}
+.sypp-addcompany-title{
+    font-family: Assistant;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.9);
+
+}
+
+.sypp-newcompany-button{
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    display: flex;
+    border: none;
+    width: 101px;
+    height: 44px;
+    border-radius: 26px;
+    background: #C2DBFF;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    &:hover{
+        background: #9ABAEA;
+    }
+    &:active{
+        background: #7699CE;
+    }
+}
