design fix, event editor fix, checklist fix

--- a/src/components/addApp/Modalbox.css
+++ b/src/components/addApp/Modalbox.css
@@ -48,6 +48,9 @@
     font-size: 12px;
     color: #ffffff;
 }
+.sypp-modal-text-company-margin{
+    margin-bottom: 9px;
+}
 
 .sypp-button-close{
     position: absolute;
