--- a/src/components/progress/ProgressBar.scss
+++ b/src/components/progress/ProgressBar.scss
@@ -18,9 +18,11 @@
     // padding-top: 5px;
     // padding-bottom: 5px;
     &:hover {
+        margin-left: -2px;
         border: 2px solid rgba(194, 219, 255, 1);
         background: rgba(156, 193, 249, 0.2);
         z-index: -1;
+        width: 514px;
     }
     width: 510px;
     height: 44px;
