--- a/src/components/addApp/Modalbox.scss
+++ b/src/components/addApp/Modalbox.scss
@@ -45,11 +45,9 @@
     justify-self: center;
     margin:0 auto; 
     text-align: center;
-    place-self: center;
     padding-top: 3px;
     padding-bottom: 3px;
     width: 240px;
-    margin-top: 9px;
     min-height: 35px;
     background: rgba(255, 255, 255, 0.15);
     color: #FFE9D6;
@@ -66,6 +64,11 @@
     &:focus{
         border: solid  1px #DACABD
     }
+}
+.sypp-company-position-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 .sypp-button-next{
     display: inline-flex;
