--- a/src/main_companies/CompanyList.scss
+++ b/src/main_companies/CompanyList.scss
@@ -49,57 +49,57 @@
     background: none;
     color: rgba(255, 255, 255, 0.87);
 }
-.sypp-modal-input{
-    text-align: center;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    width: 240px;
-    margin-top: 9px;
-    min-height: 35px;
-    background: rgba(255, 255, 255, 0.15);
-    color: #FFE9D6;
-    border: none;
-    border-radius: 26px;
-    font-size: 12px;
-    outline: none;
-    &:hover{
-        border: solid 1px #918D8D;
-    }
-    &:active{
-        border: solid  1px #DACABD
-    }
-    &:focus{
-        border: solid  1px #DACABD
-    }
-}
-.sypp-button-next{
-    display: block;
-    margin: 0 auto;  
-    margin-top: 100px;  
-    padding: 0;
-    border: none;
-    background: none;
-    font-family: Assistant;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    color: #C2DBFF;
-    margin-bottom: 10px;
+// .sypp-modal-input{
+//     text-align: center;
+//     padding-top: 3px;
+//     padding-bottom: 3px;
+//     width: 240px;
+//     margin-top: 9px;
+//     min-height: 35px;
+//     background: rgba(255, 255, 255, 0.15);
+//     color: #FFE9D6;
+//     border: none;
+//     border-radius: 26px;
+//     font-size: 12px;
+//     outline: none;
+//     &:hover{
+//         border: solid 1px #918D8D;
+//     }
+//     &:active{
+//         border: solid  1px #DACABD
+//     }
+//     &:focus{
+//         border: solid  1px #DACABD
+//     }
+// }
+// .sypp-button-next{
+//     display: block;
+//     margin: 0 auto;  
+//     margin-top: 100px;  
+//     padding: 0;
+//     border: none;
+//     background: none;
+//     font-family: Assistant;
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 12px;
+//     color: #C2DBFF;
+//     margin-bottom: 10px;
  
-    &:disabled{
-        color: #5E6A7E;
-    }
-    &:hover{
-        color: #DBEAFF;
-    }
-    &:active{
-        color: #E3EFFF;   
-    }
-    &:focus{
-        color: #E3EFFF;   
-        outline: none;
-    }
-}
+//     &:disabled{
+//         color: #5E6A7E;
+//     }
+//     &:hover{
+//         color: #DBEAFF;
+//     }
+//     &:active{
+//         color: #E3EFFF;   
+//     }
+//     &:focus{
+//         color: #E3EFFF;   
+//         outline: none;
+//     }
+// }
 .sypp-addcompany-container{
     display: flex;
     flex-direction: column;
