--- a/src/components/progress/ProgressBar.scss
+++ b/src/components/progress/ProgressBar.scss
@@ -108,6 +108,7 @@
     margin-top: 2px;
     margin-left: -10px;
     min-width: 59px;
+    max-width: auto;
     height: 17px;
     z-index: 10;
 }
@@ -117,6 +118,7 @@
     justify-content: center;
     background: #FFD600;
     min-width: 59px;
+    max-width: auto;
     height: 17px;
     color: #1A1C20;
     font-family: Assistant;
