--- a/src/main_applications/ApplicationDetail.scss
+++ b/src/main_applications/ApplicationDetail.scss
@@ -9,6 +9,7 @@
     /* display: inline-block; */
     // margin-left: 5px;
     margin-right: 10px;
+
     margin-top: 2px;
     margin-bottom: 2px;
 }
@@ -17,6 +18,8 @@
     padding-top: 3px;
     // min-width: 65px;
     min-height: 24px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 
