--- a/src/main_companies/CompanyList.scss
+++ b/src/main_companies/CompanyList.scss
@@ -2,16 +2,13 @@
     // margin: 0 auto;
     display: flex;
     justify-content: left;
-    align-items: center;
+    align-content: center;
+    // align-items: center;
     border-radius: 30px;
     width: 510px;
     height: 30px;
-    &:hover {
-        background: rgba(255, 255, 255, 0.15);
-    }
-    padding-left: 15px;
-    // padding-top: 5px;
-    // padding-bottom: 5px;
+    margin-left: 10px;
+
 }
 .sypp-CompanyList{
     margin-left: 10px;
@@ -20,9 +17,8 @@
     font-style: normal;
     font-weight: 600;
     font-size: 12px;
-    line-height: 16px;
     color: #FFE9D6;
-    }
+}
 
 
 .sypp-ModalMain{
@@ -49,70 +45,21 @@
     background: none;
     color: rgba(255, 255, 255, 0.87);
 }
-// .sypp-modal-input{
-//     text-align: center;
-//     padding-top: 3px;
-//     padding-bottom: 3px;
-//     width: 240px;
-//     margin-top: 9px;
-//     min-height: 35px;
-//     background: rgba(255, 255, 255, 0.15);
-//     color: #FFE9D6;
-//     border: none;
-//     border-radius: 26px;
-//     font-size: 12px;
-//     outline: none;
-//     &:hover{
-//         border: solid 1px #918D8D;
-//     }
-//     &:active{
-//         border: solid  1px #DACABD
-//     }
-//     &:focus{
-//         border: solid  1px #DACABD
-//     }
-// }
-// .sypp-button-next{
-//     display: block;
-//     margin: 0 auto;  
-//     margin-top: 100px;  
-//     padding: 0;
-//     border: none;
-//     background: none;
-//     font-family: Assistant;
-//     font-style: normal;
-//     font-weight: bold;
-//     font-size: 12px;
-//     color: #C2DBFF;
-//     margin-bottom: 10px;
- 
-//     &:disabled{
-//         color: #5E6A7E;
-//     }
-//     &:hover{
-//         color: #DBEAFF;
-//     }
-//     &:active{
-//         color: #E3EFFF;   
-//     }
-//     &:focus{
-//         color: #E3EFFF;   
-//         outline: none;
-//     }
-// }
+
 .sypp-addcompany-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 113px;
+    margin-top: 130px;
 }
+
 .sypp-addcompany-title{
     font-family: Assistant;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
+    margin-bottom: 5px;
     color: rgba(255, 255, 255, 0.9);
-
 }
 
 .sypp-newcompany-button{
@@ -133,5 +80,45 @@
     }
     &:active{
         background: #7699CE;
+    }
+}
+.sypp-company-sortby{
+    font-family: Assistant;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 11px;
+    margin-top: 15px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.sypp-company-button-next{
+    display: block;
+    margin:0 auto; 
+    margin-top: 90;
+
+    padding: 0;
+    border: none;
+    background: none;
+    font-family: Assistant;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    color: #C2DBFF;
+    margin-bottom: 10px;
+ 
+    &:disabled{
+        color: #5E6A7E;
+    }
+    &:hover{
+        color: #DBEAFF;
+    }
+    &:active{
+        color: #E3EFFF;   
+    }
+    &:focus{
+        color: #E3EFFF;   
+        outline: none;
     }
 }
