--- a/src/main_applications/ApplicationList.scss
+++ b/src/main_applications/ApplicationList.scss
@@ -46,9 +46,9 @@
 }
 
 .sypp-modalButton{
-    position: absolute;
-    bottom: 15px;
-    left: 15px;
+    position: relative;
+    bottom: 65px;
+    left: 10px;
     z-index: 5;
 }
 
@@ -88,4 +88,154 @@
     font-size: 11px;
     color: rgba(221, 221, 221, 0.6);
 
+}
+//dropdown class
+
+  .sypp-custom-select {
+      width: fit-content;
+      background: transparent;
+  }
+  .sypp-custom-option {
+    background: transparent !important;
+  }
+
+
+
+  
+.custom-select-wrapper {
+  position: relative;
+  user-select: none;
+  width: 100%;
+}
+.custom-select {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  border-width: 0 2px 0 2px;
+  border-style: solid;
+  border-color: #394a6d;
+}
+.custom-select__trigger {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 22px;
+  font-size: 20px;
+  font-weight: 300;
+  color: #3b3b3b;
+  height: 60px;
+  line-height: 60px;
+  background: #ffffff;
+  cursor: pointer;
+  border-width: 2px 0 2px 0;
+  border-style: solid;
+  border-color: #394a6d;
+}
+.custom-options {
+  position: absolute;
+  display: block;
+  top: 100%;
+  left: 0;
+  right: 0;
+  border: 2px solid #394a6d;
+  border-top: 0;
+  background: #fff;
+  transition: all 0.5s;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  z-index: 2;
+}
+.custom-select.open .custom-options {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+.custom-option {
+  position: relative;
+  display: block;
+  padding: 0 22px 0 22px;
+  font-size: 22px;
+  font-weight: 300;
+  color: #3b3b3b;
+  line-height: 60px;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.custom-option:hover {
+  cursor: pointer;
+  background-color: #b2b2b2;
+}
+.custom-option.selected {
+  color: #ffffff;
+  background-color: #305c91;
+}
+
+
+.arrow {
+  position: relative;
+  height: 15px;
+  width: 15px;
+}
+.arrow::before, .arrow::after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  width: 0.15rem;
+  height: 100%;
+  transition: all 0.5s;
+}
+.arrow::before {
+  left: -5px;
+  transform: rotate(45deg);
+  background-color: #394a6d;
+}
+.arrow::after {
+  left: 5px;
+  transform: rotate(-45deg);
+  background-color: #394a6d;
+}
+.open .arrow::before {
+  left: -5px;
+  transform: rotate(-45deg);
+}
+.open .arrow::after {
+  left: 5px;
+  transform: rotate(45deg);
+}
+
+.sypp-category-dropdown{
+  position: relative;
+  display: inline-block !important;
+  width: fit-content;
+  color: white ;
+  font-size: 14px; 
+  font-weight: bold;
+}
+.Dropdown-arrow-wrapper.sypp-category-dropdown-arrowdiv{
+  margin-left: 15px; 
+}
+.sypp-category-dropdown-arrow{
+  margin-left: 4px;
+  font-size: 0.8rem;
+  color: white;
+}
+.sypp-Dropdown-control{
+  display: flex;
+  cursor: pointer;
+}
+.sypp-Dropdown-menu{
+  cursor: pointer;
+  display: block !important;
+  position: absolute;
+  padding: 5px;
+  width: 113px;
+  background: #1E2127;  
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  border-top: transparent;
+  border-radius: 0px 0px 10px 10px;
+  font-size: 10px;
+  text-align: center;
+  z-index: 1000;
 }
