--- a/src/main_applications/ApplicationList.scss
+++ b/src/main_applications/ApplicationList.scss
@@ -56,7 +56,7 @@
     display: flex;
     align-items: center;
     padding-left: 7px;
-    width: 510px;
+    width: 200px;
     height: 24px;
     font-size: 11px;
     color: #ffffff;
@@ -238,4 +238,38 @@
   font-size: 10px;
   text-align: center;
   z-index: 1000;
+}
+
+.sypp-searchBox-container{
+  margin-left: 10px;
+}
+
+.sypp-application-category-container{
+  display: flex;
+  margin-left: 20px;
+}
+.sypp-selectTitle-container{
+  margin-left: 20px;
+}
+.sypp-applicationList-container{
+  margin-left: 22px;
+}
+::-webkit-scrollbar {
+  width: 4px ;
+  height: 4px;
+  border-radius: 15px;
+  background-color: transparent;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: #555;
 }
