--- a/src/main_applications/CategoryButtons.scss
+++ b/src/main_applications/CategoryButtons.scss
@@ -47,3 +47,26 @@
         font-weight: bold;
     }
 }
+
+.btn-secondary.sypp-colorChange2{
+    background: #363C46;
+    border-radius: 26px !important;
+    border: none;
+    margin-right: 10px;
+}
+.btn-secondary:not(:disabled):not(.disabled).active.sypp-activeChange{
+    background: #C2DBFF;
+    border:none;
+    color: black;
+    font-family: Assistant;
+    font-style: normal;
+}
+.btn.sypp-text1{
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-family: Assistant;
+    font-style: normal;
+    color: rgba(194, 219, 255, 1);
+}
+
