major design update finished and sign up function added. Some minor bugs are fixed and will need to work on the category

--- a/src/add_application/Modalbox.scss
+++ b/src/add_application/Modalbox.scss
@@ -1,8 +1,8 @@
 .sypp-newapp-button{
     display: flex;
     position: absolute;
-    bottom: 5px;
-    left: 5px;
+    // bottom: 13px;
+    left: 10px;
     border: none;
     width: 101px;
     height: 44px;
@@ -25,9 +25,7 @@
     font-weight: bold;
     color: #212832;
     font-size: 23px;
-    margin-bottom: 4px;
     cursor: pointer;
-
 }
 .sypp-newapp-button-body{
     padding: 0;
