--- a/src/main_applications/ApplicationDetail.scss
+++ b/src/main_applications/ApplicationDetail.scss
@@ -5,6 +5,9 @@
     background: transparent !important;
     border: none;
 }
+.modal-dialog{
+    margin: 0 auto;
+}
 .sypp-button-container-applicationDetail{
     /* display: inline-block; */
     // margin-left: 5px;
