--- a/src/main_applications_components/ApplicationDetailNotes.scss
+++ b/src/main_applications_components/ApplicationDetailNotes.scss
@@ -5,7 +5,9 @@
     color: #ffffff;
     font-size: 11px;
 }
-
+.sypp-editor-class-checklist{
+  line-height: 16px;
+}
 .sypp-ApplicationDetailNote-container{
   padding: 5px;
   padding-left: 10px;
