--- a/src/components/progress/ProgressBar.scss
+++ b/src/components/progress/ProgressBar.scss
@@ -18,7 +18,7 @@
     // padding-top: 5px;
     // padding-bottom: 5px;
     &:hover {
-        margin-left: -2px;
+        // margin-left: -2px;
         border: 2px solid rgba(194, 219, 255, 1);
         background: rgba(156, 193, 249, 0.2);
         z-index: -1;
@@ -105,7 +105,7 @@
     padding-left: 5px;
     padding-right: 5px;
     border-radius: 27px;
-    margin-top: 2px;
+    margin-top: 1px;
     margin-left: -10px;
     min-width: 59px;
     max-width: auto;
