--- a/src/main_applications/ApplicationList.scss
+++ b/src/main_applications/ApplicationList.scss
@@ -53,18 +53,22 @@
 }
 
 .sypp-applicationlist-searchBox{
-    display: flex;
-    align-items: center;
-    padding-left: 7px;
-    width: 200px;
-    height: 24px;
-    font-size: 11px;
-    color: #ffffff;
-    border: 2px solid #363C46;
-    box-sizing: border-box;
-    border-radius: 30px;
-    background: transparent;
-    outline: none;
+  display: flex;
+  align-items: center;
+  padding-left: 7px;
+  width: 200px;
+  height: 24px;
+  font-size: 11px;
+  color: #ffffff;
+  border: 2px solid #363C46;
+  box-sizing: border-box;
+  border-radius: 30px;
+  background: transparent;
+  outline: none;
+}
+.sypp-applicationlist-searchBox-company{
+  width: 475px !important;
+  margin-bottom: 15px;
 }
 .sypp-appilication-name-container{
     display: flex;
@@ -82,6 +86,7 @@
 }
 .sypp-task-sortby{
     margin-top: 3px;
+    margin-left: 20px;
     font-family: Assistant;
     font-style: normal;
     font-weight: 600;
@@ -208,30 +213,37 @@
 .sypp-category-dropdown{
   position: relative;
   display: inline-block !important;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
   width: fit-content;
   color: white ;
   font-size: 14px; 
   font-weight: bold;
 }
 .Dropdown-arrow-wrapper.sypp-category-dropdown-arrowdiv{
+  margin-top: 20px !important;
   margin-left: 15px; 
 }
 .sypp-category-dropdown-arrow{
   margin-left: 4px;
+  margin-top: 5px;
   font-size: 0.8rem;
   color: white;
+  display: flex;
 }
 .sypp-Dropdown-control{
   display: flex;
   cursor: pointer;
 }
-.sypp-Dropdown-menu{
+.Dropdown-menu.sypp-Dropdown-menu{
   cursor: pointer;
   display: block !important;
   position: absolute;
   padding: 5px;
   width: 113px;
   background: #1E2127;  
+  color: #ffffff;
   border: 1px solid rgba(255, 255, 255, 0.8);
   border-top: transparent;
   border-radius: 0px 0px 10px 10px;
