--- a/src/main_companies/CompanyList.scss
+++ b/src/main_companies/CompanyList.scss
@@ -7,9 +7,10 @@
     border-radius: 30px;
     width: 510px;
     height: 30px;
-    margin-left: 10px;
+    padding-left: 10px;
 
 }
+
 .sypp-CompanyList{
     margin-left: 10px;
     cursor: pointer;
@@ -68,7 +69,9 @@
     left: 20px;
     display: flex;
     border: none;
-    width: 101px;
+    width: fit-content;
+    padding-left: 17px;
+    padding-right: 17px;
     height: 44px;
     border-radius: 26px;
     background: #C2DBFF;
