edited some hovering issues in task bar, will need to work on the category and task update when backend api gets updated

--- a/src/components/progress/Progress.css
+++ b/src/components/progress/Progress.css
@@ -50,6 +50,9 @@
     min-height: 0;
     min-width: 0;
 }
+.sypp-addTask:hover{
+    background: #C1C3C6;
+}
 
 .MuiSvgIcon-root.sypp-sizeChange{
     height: 1.3em;
