--- a/src/components/progress/ProgressBar.scss
+++ b/src/components/progress/ProgressBar.scss
@@ -87,16 +87,24 @@
 }
 .sypp-Completed {
     background-color: #94CE4B !important;
+    // &:hover{
+    //     background-color: #FFD600 !important;
+    // }
 }
 .sypp-NotCompleted{
     background-color: #FFD600 !important;
+    // &:hover{
+    //     background-color: #94CE4B !important;
+    // }
 }
 
 .sypp-task-tooltip-completed{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #94CE4B;
+    // background: #94CE4B;
+    background: #FFD600;
+
     color: #1A1C20;
     font-family: Assistant;
     font-style: normal;
@@ -111,12 +119,15 @@
     max-width: auto;
     height: 17px;
     z-index: 10;
+
 }
 .sypp-task-tooltip-notcompleted{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #FFD600;
+    // background: #FFD600;
+    background: #94CE4B;
+
     min-width: 59px;
     max-width: auto;
     height: 17px;
@@ -131,6 +142,7 @@
     margin-top: 2px;
     z-index: 10;
     margin-left: -10px;
+
 }
 .sypp-task-tooltip-more{
     cursor: pointer;
