--- a/src/main_applications/ApplicationDetail.scss
+++ b/src/main_applications/ApplicationDetail.scss
@@ -3,7 +3,7 @@
 }
 .modal-content{
     background: transparent !important;
-    border: none;
+    border: none !important;
 }
 .modal-dialog{
     margin: 0 auto;
